--- a/0_api_exploration.ipynb
+++ b/0_api_exploration.ipynb
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "api_key = 'AIzaSyCvuVyH6qsMQ30w7mNIj0h6ExxsIy32dlY'\n",
+    "api_key = open('api_key.txt').read()\n",
     "# Get the API key from the credentials\n",
     "gmaps = googlemaps.Client(key=api_key)\n",
     "\n",
